Completed issues upto BE-6
